--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,31 +6,16 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 120px; 
+  height: 3em; 
   text-align: center;
   margin-bottom: 5px;
 }
 
 
-#appName {
-  margin: 0;
-  font-family: "Baloo Chettan", sans-serif;
-  font-size: 60px;
-  font-weight: 400;
-  line-height: normal;
-  text-align: center;
-  cursor: pointer;
-  pointer-events: none;
-}
-#slogan{
-  font-size: 18px;
-  margin-top: 0px;
-  font-family: "Baloo Chettan", sans-serif;
-  pointer-events: none;
-}
 #hamburger {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 9999;
  }
  
